# Schedulr.AI

./: README.md  pyproject.toml
app/: main.py
app/agent/: scheduling_agent.py
app/agent/prompt_templates/: scheduling_agent_prompt_templates.py
app/agent/prompts/: scheduling_agent_prompts.py
app/agent/tools/: scheduling_agent_tools.py
app/api/v1/: login.py
app/api/v1/routes/: schedule.py
app/core/: config.py
app/core/utils/: dependency.py  enums.py  llm_models.py  response_model.py  utility_functions.py
app/database/models/: output_formatter.py  schedule_models.py  user_info_models.py
app/database/models/graph_states/: scheduling_agent_states.py
app/database/postgres/: setup_postgres.py
app/services/: google_people_service.py  scopes.py
envs/: db.env  google_services.env
